Update links and sections in index.html

--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@ const content = {
     links: [
       { label:"LinkedIn", icon:"bi-linkedin", href:"https://www.linkedin.com/in/okanolgun06/" },
       { label:"GitHub", icon:"bi-github", href:"https://github.com/okanolgun" },
-      { label:"Google Scholar", icon:"bi-mortarboard", href:"https://scholar.google.com/" },
-      { label:"ResearchGate", icon:"bi-journal-text", href:"https://www.researchgate.net/" },
-      { label:"Medium", icon:"bi-medium", href:"https://medium.com/" }
+      { label:"Google Scholar", icon:"bi-mortarboard", href:"https://scholar.google.com/citations?user=WKdvI1YAAAAJ&hl=tr" },
+      { label:"ResearchGate", icon:"bi-journal-text", href:"https://www.researchgate.net/profile/Okan-Olgun" },
+      { label:"Medium", icon:"bi-medium", href:"https://medium.com/@okanolgun980" }
     ],
     sections: { about:"Özet", focus:"Temel Yetkinlikler", experience:"İş Deneyimi", projects:"Seçili Projeler", education:"Eğitim", additional:"Ek Deneyimler", volunteering:"Sosyal Sorumluluk", contact:"İletişim" },
     about:
@@ -424,9 +424,9 @@ const content = {
     links: [
       { label:"LinkedIn", icon:"bi-linkedin", href:"https://www.linkedin.com/in/okanolgun06/" },
       { label:"GitHub", icon:"bi-github", href:"https://github.com/okanolgun" },
-      { label:"Google Scholar", icon:"bi-mortarboard", href:"https://scholar.google.com/" },
-      { label:"ResearchGate", icon:"bi-journal-text", href:"https://www.researchgate.net/" },
-      { label:"Medium", icon:"bi-medium", href:"https://medium.com/" }
+      { label:"Google Scholar", icon:"bi-mortarboard", href:"https://scholar.google.com/citations?user=WKdvI1YAAAAJ&hl=tr" },
+      { label:"ResearchGate", icon:"bi-journal-text", href:"https://www.researchgate.net/profile/Okan-Olgun" },
+      { label:"Medium", icon:"bi-medium", href:"https://medium.com/@okanolgun980" }
     ],
     sections: { about:"Summary", focus:"Core Skills", experience:"Experience", projects:"Selected Projects", education:"Education", additional:"Additional Experience", volunteering:"Social Responsibility & Community Engagement", contact:"Contact" },
     about:
